# fabric-private-chaincode

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  build.mk  commands.sh  config.mk  go.mod  go.sum  tools.go
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  settings.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  work-item-template.md
client_sdk/: Makefile
client_sdk/go/: Makefile  (+2 more)
cmake/: ConfigSGX.cmake  Debug.cmake  Init.cmake  NanoPB.cmake
common/: CMakeLists.txt  Makefile  error.h  fpc-types.h  logging.c  logging.h  types.h  utils.c  utils.h
common/crypto/: CMakeLists.txt  CMakeVariables.txt  Makefile  pdo-crypto-c-wrapper.cpp  pdo-crypto-c-wrapper.h  types.cpp
common/crypto/attestation-api/attestation/: attestation.cpp  attestation.h  attestation_tags.h
common/crypto/attestation-api/conversion/: attestation_to_evidence.sh
common/crypto/attestation-api/conversion/epid/: a2e.sh
common/crypto/attestation-api/conversion/simulated/: a2e.sh
common/crypto/attestation-api/evidence/: verify-evidence.cpp  verify-evidence.h
common/crypto/attestation-api/ocalls/: attestation-ocalls.c  attestation-ocalls.edl
common/crypto/attestation-api/scripts/: attestation_to_evidence.sh  define_to_variable.sh  enclave_to_mrenclave.sh
common/crypto/attestation-api/test/: CMakeLists.txt  attested_evidence_test.sh
common/crypto/attestation-api/test/common/: test-defines.h  test-utils.cpp  test-utils.h
common/crypto/attestation-api/test/conversion_app_go/: main.go
common/crypto/attestation-api/test/get_attestation_app/app/: main.cpp
common/crypto/attestation-api/test/get_attestation_app/enclave/: CMakeLists.txt  test.cpp  test.h  test_enclave.config.xml  test_enclave.edl  test_enclave.lds
common/crypto/attestation-api/test/verify_evidence_app/: main.cpp  test.cpp  test.h
common/crypto/attestation-api/test/verify_evidence_app_go/: main.go
common/enclave/: cc_data.cpp  cc_data.h  common.cpp  common.edl  generate_mrenclave.sh  logging.edl
common/json/: parson.c  parson.h
common/logging/: CMakeLists.txt  CMakeVariables.txt  Makefile
common/logging/include/: log-defines.h
common/logging/ocalls/: logging.c  logging.edl
common/logging/test/: CMakeLists.txt
common/logging/test/untrusted/: test.cpp
common/logging/trusted/: logging.c  logging.h
common/logging/untrusted/: logging.c  logging.h
common/sgxcclib/: check-sgx-error.h  common-sgxcclib.c  common-sgxcclib.h  sgx_attestation_type.h
demo/: .gitignore  Makefile  README.md  docker-compose.yml
docs/: .gitignore  Makefile  architecture-design.md  build-sgx.md  fpc-cc-execution.puml  fpc-cc-invocation.puml  fpc-key-dist.puml  fpc-lifecycle.puml  fpc-lifecycle.txt  fpc-registration.puml  fpc-validation-msp.puml  interfaces.md  playground-nonsgx.md  referenceguides.md  setup-option1.md  setup-option2.md  troubleshooting.md
ecc/: .gitignore  Dockerfile  Dockerfile.boilerplate-ecc  Dockerfile.fpc-app  Makefile  README.md  enclave_chaincode.go  enclave_chaincode_test.go  go.mod  go.sum  main.go
ecc_enclave/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  generate_mrenclave.sh
ecc_enclave/enclave/: CMakeLists-common-app-enclave.txt  CMakeLists.txt  CMakeVariables.txt  chaincode.h  crypto.cpp  crypto.h  enclave.config.xml  enclave.cpp  enclave.edl  shim.cpp  shim.h  shim_internals.cpp  shim_internals.h
ecc_enclave/enclave/auction/: auction_cc.cpp  auction_cc.h  auction_json.cpp  auction_json.h
ecc_enclave/sgxcclib/: CMakeLists.txt  CMakeVariables.txt  sgx_attestation_type.h  sgxcclib.c  sgxcclib.h
ecc_go/: .gitignore  Dockerfile  Dockerfile.go-ecc  Makefile  README.md  build.mk  enclave.json  main.go
ecc_mock/: .gitignore  Dockerfile  Makefile  main.go
ercc/: .gitignore  Dockerfile  Makefile  README.md  chaincode.env  connection.json  ercc.go  ercc.tgz  ercc_test.go  go.mod  go.sum  main.go  metadata.json  provider.go.template
examples/: Dockerfile  Makefile  README.md
fabric/: .gitignore  0001-Add-FPC-validator-to-library.patch  0001-Integrate-FPC-Validation-Plugin.patch  0001-Integrate-tlcc-syscc.patch  0001-add-proxy-support-for-docker-in-peer.patch  0001-mock-also-creator-identity-like-signedproposal-or-Ch.patch  0001-proxy-enable-chaincode-containers-if-necessary.patch  0001-sgx-enable-invoked-docker-containers-iff-either-dev-.patch  0001-sgx-enable-invoked-docker-containers.patch  Makefile  README.md  sgx_support.patch
ias_credentials/: Makefile
integration/: .gitignore  Makefile  auction_test.sh  client_sdk_test.sh  common_ledger.sh  common_utils.sh  deployment_test.sh  echo_test.sh  kv_test.sh  stress_test.sh
internal/: Makefile
plugins/: .gitignore  Makefile  README.md
protos/: .gitignore  Makefile  README.md  fabric.options  fpc.options  generate_protos.sh
samples/: Makefile  README.md
scripts/: changelog.sh  check_license.sh  cpplinter.sh  functions.sh  golinter.sh  gomate.sh  report.sh
tlcc/: .gitignore  Makefile  README.md  tlcc.go  tlcc_test.go
tlcc_enclave/: .gitignore  CMakeLists.txt  CMakeVariables.txt  Makefile  README.md  compile_protos.sh  generate_mrenclave.sh  generate_protos.sh
tlcc_enclave/enclave/: CMakeLists.txt  CMakeVariables.txt  asn1_utils.c  asn1_utils.h  crypto.cpp  crypto.h  ecc_json.cpp  ecc_json.h  enclave.config.xml  enclave.cpp  enclave.edl  ias.cpp  ias.h  ledger.cpp  ledger.h
tlcc_enclave/protos/: fabric.options
tlcc_enclave/test/: CMakeLists.txt  getLedgerBlocks  test.c
tlcc_enclave/test/test_blocks/: mychannel-block0  mychannel-block1  mychannel-block10  mychannel-block2  mychannel-block3  mychannel-block4  mychannel-block5  mychannel-block6  mychannel-block7  mychannel-block8  mychannel-block9
tlcc_enclave/trusted_ledger/: CMakeLists.txt  trusted_ledger.c  trusted_ledger.h
utils/: Makefile  test_helper.go  tools.go  utils.go
vscc/: Makefile  ercc_validation_logic.go  ercc_validation_logic_test.go
(+987 files in other folders)
